2002-10-06  Dom Lachowicz <doml@appligent.com>

	* svg-rc-style.c (): Added const-ness to struct
	* rsvg.c (rsvg_parse_cssbuffer, rsvg_style_handler_*): new functions
	to implement CSS style parsing
	(*): Implement CSS1/CSS2 style handling based on tagname (eg. "text") and on class (eg. "error")
	(*): Implement proper handler nesting, cleanup a few memleaks
	
2002-10-05  Dom Lachowicz <doml@appligent.com>

	* Move test images to tests subdirectory, add more tests
	* rsvg.c (start_image): Handle affines, rotation, scaling, translate. 
	Has bugs that can be taken care of by gdk_pixbuf_copy later
	
2002-10-05  Alexander Larsson  <alexl@redhat.com>

	* gdk-pixbuf-loader/io-svg.c:
	Declare fill_vtable and fill_info to avoid warning.

2002-10-04  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (): fix bugs with gradient style handling, few other bugs left in radial gradient
	
2002-10-04  Dom Lachowicz <doml@appligent.com>

	* test-rsvg.c (main): Implemented version, better help description
	
2002-10-04  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	* configure.in:
	Install test-rsvg as rsvg
	Fix gdk-pixbuf-loader build when you have an old version of gdk-pixbuf.

2002-10-03  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (start_svg): Fix error that was hurting nautilus icon themes

	* test-rsvg.c (main): fix segfaults, add width, height arguments, configurable output format
	
2002-10-03  Matthias Clasen <maclas@gmx.de>

	* gdk-pixbuf-loader : RSVG can now be optionally a loadable module for GdkPixbuf, if you have a new enough version of GdkPixbuf
	
2002-10-03  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (set_dpi): minor update to reset the DPI if necessary
	
2002-10-02  Dom Lachowicz <doml@appligent.com>

	* rsvg-path.c (*): Remove VERBOSE statements
	* rsvg.c (*): Remove VERBOSE statements
	(rsvg_pixbuf_from_file_with_size_data): New FN for parsing through SVG files. Optionally Gnome-VFS aware (no configure joo-joo yet)