@@ -1,3 +1,12 @@
+2002-10-07  Dom Lachowicz <doml@appligent.com>
+
+	* rsvg-paint-server.c (rsvg_clone_linear_gradient, rsvg_clone_radial_gradient): new functions for cloning gradient states
+	* rsvg.c (rsvg_gradient_stop_handler_new_clone): new function for setting up a gradient stop handler from a cloned gradient
+	(rsvg_start_radial_gradient): Handle xlink:href for cloned gradients
+	(rsvg_start_linear_gradient): ditto
+	(text_handler_characters): Fix segv
+	(*): fix misc memleaks. thanks valgrind!
+	
 2002-10-06  Dom Lachowicz <doml@appligent.com>
 
 	* svg-rc-style.c (): Added const-ness to struct
